--- a/myapp/views/index.pug
+++ b/myapp/views/index.pug
@@ -1,5 +1,6 @@
-extends layout
 
-block content
-  h1= title
-  p Welcome to #{title}
+ul
+  each entry in data
+    li
+        a(href=entry.url) #{entry.C_name}
+    
