--- a/myapp/public/stylesheets/style.css
+++ b/myapp/public/stylesheets/style.css
@@ -1,9 +1,9 @@
 body {
-  background-color: green;
+  background-color:  rgb(0 0 0 / 52%);
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
-  color: #00B7FF;
+  color: whitesmoke
 }
