--- a/myapp/views/create.ejs
+++ b/myapp/views/create.ejs
@@ -1,152 +1,195 @@
-<!-- <style>
-    html, body {
+<style>
+  html,
+  body {
     min-height: 100%;
-    }
-    body, div, form, input, select, p { 
+  }
+
+  body,
+  div,
+  form,
+  input,
+  select,
+  p {
     padding: 0;
     margin: 0;
     outline: none;
     font-family: Roboto, Arial, sans-serif;
     font-size: 16px;
     color: #eee;
-    }
-    body {
+  }
+
+  body {
     background: url("/uploads/media/default/0001/01/b5edc1bad4dc8c20291c8394527cb2c5b43ee13c.jpeg") no-repeat center;
     background-size: cover;
-    }
-    h1, h2 {
+  }
+
+  h1,
+  h2 {
     text-transform: uppercase;
     font-weight: 400;
-    }
-  
-    h2 {
+  }
+
+  h2 {
     margin: 0 0 0 8px;
-    }
-    .main-block {
+  }
+
+  .main-block {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100%;
     padding: 25px;
-    background: rgba(0, 0, 0, 0.5); 
-    }
-    .left-part, form {
+    background: rgba(0, 0, 0, 0.5);
+  }
+
+  .left-part,
+  form {
     padding: 25px;
-    }
-    .left-part {
+  }
+
+  .left-part {
     text-align: center;
-    }
-    .fa-graduation-cap {
+  }
+
+  .fa-graduation-cap {
     font-size: 72px;
-    }
-    form {
-    background: rgba(0, 0, 0, 0.7); 
-    }
-    .title {
+  }
+
+  form {
+    background: rgba(0, 0, 0, 0.7);
+  }
+
+  .title {
     display: flex;
     align-items: center;
     margin-bottom: 20px;
-    }
-    .info {
+  }
+
+  .info {
     display: flex;
     flex-direction: column;
-    }
-    input, select {
+  }
+
+  input,
+  select {
     padding: 5px;
     margin-bottom: 30px;
     background: transparent;
     border: none;
     border-bottom: 1px solid #eee;
-    }
-    input::placeholder {
+  }
+
+  input::placeholder {
     color: #eee;
-    }
-    option:focus {
+  }
+
+  option:focus {
     border: none;
-    }
-    option {
-    background: black; 
+  }
+
+  option {
+    background: black;
     border: none;
-    }
-    .checkbox input {
+  }
+
+  .checkbox input {
     margin: 0 10px 0 0;
     vertical-align: middle;
-    }
-    .checkbox a {
+  }
+
+  .checkbox a {
     color: #26a9e0;
-    }
-    .checkbox a:hover {
+  }
+
+  .checkbox a:hover {
     color: #85d6de;
-    }
-    .btn-item, button {
+  }
+
+  .btn-item,
+  button {
     padding: 10px 5px;
     margin-top: 20px;
-    border-radius: 5px; 
+    border-radius: 5px;
     border: none;
-    background: #26a9e0; 
+    background: #26a9e0;
     text-decoration: none;
     font-size: 15px;
     font-weight: 400;
     color: #fff;
-    }
-    .btn-item {
+  }
+
+  .btn-item {
     display: inline-block;
     margin: 20px 5px 0;
-    }
-    button {
+  }
+
+  button {
     width: 100%;
-    }
-    button:hover, .btn-item:hover {
+  }
+
+  button:hover,
+  .btn-item:hover {
     background: #85d6de;
+  }
+
+  @media (min-width: 568px) {
+
+    html,
+    body {
+      height: 100%;
     }
-    @media (min-width: 568px) {
-    html, body {
-    height: 100%;
-    }
+
     .main-block {
-    flex-direction: row;
-    height: calc(100% - 50px);
+      flex-direction: row;
+      height: calc(100% - 50px);
     }
-    .left-part, form {
-    flex: 1;
-    height: auto;
+
+    .left-part,
+    form {
+      flex: 1;
+      height: auto;
     }
-    }
-  </style>
-   <%- include('header') -%>
-   <link rel='stylesheet' href='/stylesheets/style.css' />
-</head>
-<body>
-  <div class="main-block">
-    <div class="left-part">
-      <i class="fas fa-graduation-cap"></i>
-     
-    </div>
-    <form action="/">
-      <div class="title">
-        <i class="fas fa-pencil-alt"></i> 
-        <h2>Register here</h2>
+  }
+</style>
+<%- include('header') -%>
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+  </head>
+
+  <body>
+    <div class="main-block">
+      <div class="left-part">
+        <i class="fas fa-graduation-cap"></i>
+
       </div>
-      <div class="info">
-        <input class="fname" type="text" name="name" placeholder="Full name">
-        <input type="text" name="name" placeholder="DESCRIPTION">
-       
-        <select >
-          <option selected>select category*</option>
-            <% for(var i = 0; i < category.length; i++) {%>
-                <option <%= category[i].name %>><%= category[i].name %></option>
+      <form action="/" method="post">
+        <div class="title">
+          <i class="fas fa-pencil-alt"></i>
+          <h2>Register here</h2>
+        </div>
+        <div class="info">
+          <input class="fname" type="text" name="name" placeholder="Full name">
+          <input type="text" name="name" placeholder="DESCRIPTION">
+
+          <select>
+            <option selected>select category*</option>
+            <% for(var i=0; i < categories.length; i++) {%>
+              <option <%=categories[i].C_name %>><%= categories[i].C_name %>
+              </option>
               <% } %>
-        
-        </select>
-        <input type="text" name="name" placeholder="price">
-        <input type="password" name="name" placeholder="stockQuantity">
-      </div>
-      <div class="checkbox">
-        <input type="checkbox" name="checkbox"><span>I agree to the <a href="https://www.w3docs.com/privacy-policy">Privacy Poalicy for W3Docs.</a></span>
-      </div>
-      <button type="submit" href="/">Submit</button>
-    </form>
-  </div>
-</body>
-</html> -->
+
+          </select>
+          <input type="text" name="name" placeholder="price">
+          <input type="password" name="quantity" placeholder="stockQuantity">
+          <input type="url" name="images" placeholder="images">
+        </div>
+        <div class="checkbox">
+          <input type="checkbox" name="checkbox"><span>I agree to the <a
+              href="https://www.w3docs.com/privacy-policy">Privacy Poalicy for W3Docs.</a></span>
+        </div>
+        <button type="submit" href="/">Submit</button>
+      </form>
+    </div>
+  </body>
+
+  </html>
