--- a/myapp/views/header.ejs
+++ b/myapp/views/header.ejs
@@ -2,15 +2,67 @@
 <html>
 
 <head>
+
+
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+</head>
+<header class="decoration">
+
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="/">Home</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <!-- <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a> -->
+                <a class="nav-item nav-link" href="/catalog">Categories of product</a>
+                <a class="nav-item nav-link" href="/Category/createItem">Add New Product</a>
+                <!-- <a class="nav-item nav-link " href="#">Disabled</a> -->
+            </div>
+        </div>
+    </nav>
+</header>
+<div class="aboutPage">
+    <h1 class="about">This is about My Website</h1>
+    <p class="about">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum soluta inventore
+        temporibus iusto
+        ducimus sunt minus vitae eos neque, placeat praesentium deleniti sequi modi maxime velit non
+        alias, iste nobis?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim corrupti repellat in voluptas,
+        cumque libero ex doloribus, ducimus unde obcaecati accusantium, iure deleniti nemo dolores
+        vitae
+        itaque. Pariatur magnam, quam esse quaerat voluptate aspernatur dolor non ab aut animi sit
+        placeat deleniti laudantium quia quod illo. Illum nihil voluptas saepe sed odit sapiente
+        dicta
+        eius nostrum fuga ut aspernatur repellat nobis recusandae, amet rerum. Laboriosam,
+        consequatur?
+        Officia cumque possimus reprehenderit perferendis repudiandae maiores optio assumenda,
+        voluptate
+        ad voluptatem iusto dolore, magni fugit rem nemo. Est molestiae adipisci accusantium eum
+        debitis
+        nihil vel quod explicabo reprehenderit. Blanditiis magnam saepe soluta natus.
+    </p>
+</div>
+<!-- 
+
     <div class="header">
         <a>Grocory Shop</a>
         <ul>
             <li><a href="/">Home</a></li>
+            <li><a href="/catalog">Catalog</a></li>
             <li><a href="/Category/createItem">Create</a></li>
         </ul>
 
-    </div>
+    </div> -->
 
-</head>
+
+
 
 <body>
