--- a/myapp/views/index.ejs
+++ b/myapp/views/index.ejs
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="aboutPage">
+    <div class="aboutPage hello">
         <h1 class="about">This is about My Categories </h1>
         <p class="about">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum soluta inventore
             temporibus iusto
